--- a/src/components/main/main.style.scss
+++ b/src/components/main/main.style.scss
@@ -23,5 +23,17 @@
     font-weight: 300;
     position: absolute;
     right: 0;
-    
+
+}
+
+@media screen and (max-width: 760px) {
+    .main {
+        .side-area {
+            display: none;
+        }
+
+        .card-area {
+            margin-top: 20px;
+        }
+    }
 }
