--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Poppins&display=swap');
+
 * {
-  margin:0;
-  padding:0;
-  outline:0;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+
   body {
     font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
 }
-
